Backport the fix for the admin bar on Safari

--- a/src/core/assets/css/admin/adminbar.css
+++ b/src/core/assets/css/admin/adminbar.css
@@ -7,7 +7,8 @@
 	border-bottom: 1px solid #010101;
 	z-index: 9999;
 	padding:5px 0;
-	overflow:hidden;
+	/* Safari and some versions of Chrome on tablets do not support this hidden/fixed/fixed trick. */
+	/*overflow:hidden;*/
 	top: 0;
 	box-shadow: 0 0 3px rgb(10, 10, 10);
 	position: relative;
